Get rid of spurious horizontal scrollbars on column flexboxes.

BUG=623524
R=cbiesinger@chromium.org,eae@chromium.org

Review-Url: https://codereview.chromium.org/2116873002
Cr-Commit-Position: refs/heads/master@{#404008}

Former-commit-id: 11e29c02fa751ee9411260e5ca662622cbd679ca